--- a/web/main/.htaccess
+++ b/web/main/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteBase /
-RewriteRule (.*) index.php?p=$1 [L]
+RewriteRule (.*) index.php?p=$1 [L,QSA]
